<resources>
    <string name="app_name">foodFight</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="API_KEY">AIzaSyCE1S2YoiogjWGTCPTU1MTVE2ufb89CgYE</string>
    <string name="joey_smith">joey_smith</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="profile">Profile</string>
    <string name="set">Set</string>
    <string name="back">back</string>
    <string name="back_to_sign_up">Back to Sign Up</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="pick_your_profile">Pick Your Profile Icon!</string>
    <string name="carrot">carrot</string>
    <string name="email2">Email:</string>
    <string name="name2">Name:</string>
    <string name="account_type">Account Type:</string>
    <string name="last_name">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="blank">:)</string>
    <string name="homebutton_description">Shows the home icon.</string>
    <string name="dairy">Dairy</string>
    <string name="peanuts">Peanuts</string>
    <string name="gluten">Gluten</string>
    <string name="none">None</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="list_dietary_restrictions">List Dietary Restrictions</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="_5_00">$5.00</string>
    <string name="nutritional_facts">Nutritional Facts</string>
    <string name="reviews">Reviews</string>
    <string name="ingredients">Ingredients</string>
    <string name="home">Home</string>
    <string name="the_user_s_chosen_icon">The user\'s chosen icon.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="does_this_look_correct">Does this look correct?</string>
    <string name="confirmProfileText">Make sure both your name AND profile picture look right!</string>
    <string name="thats_it">That\'s it!</string>
    <string name="not_quite">Not quite...</string>
    <string name="nutri_serve">Nutri-Serve</string>
    <string name="strong_tom">Strong Tom</string>
    <string name="menu">Menu</string>
    <string name="allergies">Allergies</string>
    <string name="todays_menu">Today\'s Menu!</string>
    <string name="cheeseburger_price">Cheeseburger: $5.00</string>
    <string name="tenders_price">Tenders: $6.00</string>
    <string name="hamburger_price">Hamburger: $4.50</string>
    <string name="hi">Hi,</string>
    <string name="placeholder_name">Joey!</string>
    <string name="log_out">Log Out</string>
    <string name="waving_tom">Waving Tom</string>
    <string name="sitting_tom">Sitting Tom</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="fight">Fight</string>
    <string name="food">Food</string>
    <string name="enter">Enter</string>
    <string name="use_the_allergies_button_to_update">Use the allergies button to update!</string>
    <string name="allergies_selected">Restrictions Selected:</string>
    <string name="balance">Balance:</string>
    <string name="tell_us_about_your_restriction_s">Tell us about your restriction(s).</string>
    <string name="rate_it">Rate it!</string>
    <string name="write_own_review">Write your review here (optional)</string>
    <string name="placeholder_fullname">Joey Smith</string>
    <string name="icon">Icon:</string>
    <string name="selected_allergies">Selected Restrictions:</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="use_allergy_button">Use the restrictions button to update this!</string>
    <string name="want_to_review">Want to Review?</string>
    <string name="holding_sign_tom">Holding Sign Tom</string>
    <string name="review_stars">Review stars</string>
    <string name="star_number">5.0</string>
    <string name="parent_review_name">Sarah L. - Parent</string>
    <string name="parent_review">Summer always looks forward to cheeseburger day!</string>
    <string name="student_review_name">Josh S. - Student</string>
    <string name="student_review">the cheeseburger is my FAVORITE!! 5 stars!</string>
    <string name="strawberry_icon">Strawberry Icon</string>
    <string name="banana_icon">Banana Icon</string>
    <string name="tomato_icon">Tomato Icon</string>
    <string name="select_your_mode">Select Your Mode</string>
    <string name="adult_tom">Adult Tom</string>
    <string name="student_n_mode">Student \n Mode</string>
    <string name="parent_n_mode">Parent \n Mode</string>
    <string name="baby_tom">Baby Tom</string>
    <string name="continue_button">Continue</string>
    <string name="return_home">Return Home</string>
    <string name="for_joining_the_fight_for_health">for joining the fight for health!</string>
    <string name="thank_you">Thank you!</string>
    <string name="speech_bubble">speech bubble</string>
    <string name="more">More</string>
    <string name="restrictions_selected">Restrictions Selected:</string>
    <string name="use_restrictions">Use the restrictions button to update this!</string>
    <string name="restrictions">Restrictions</string>
    <string name="meat">Meat</string>
    <string name="animal_product">Animal Product</string>
    <string name="soy">Soy</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="shellfish">Shellfish</string>
    <string name="jess_r_student">Jess R. - Student</string>
    <string name="student_review_text_2">DEFINITELY coming back for more!</string>
    <string name="holds_parent_s_profile_icon">Holds parent\'s profile icon</string>
    <string name="student1_description">Holds student 1\'s profile icon</string>
    <string name="holds_student_2_s_profile_icon">Holds student 2\'s profile icon</string>

    <string name="filter_by_restriction">Filter</string>
    <string name="caution">❗</string>
    <string name="select_item">Select Item</string>
    <string name="next">Next</string>
    <string name="continueeee">Continue</string>

    <string name="nearby_schools">Nearby schools...</string>
    <string name="select_your_school">Select Your School</string>
</resources>