<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/peanuts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThankYouActivity">

    <Button
        android:id="@+id/homebutton"
        android:layout_width="203dp"
        android:layout_height="66dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#9D3B3B"
        android:fontFamily="@font/kohomedium"
        android:text="@string/return_home"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#9D3B3B"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/myButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/whitecorner2"
            android:src="@drawable/home2"
            android:contentDescription="@string/home"
            android:outlineProvider="background"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:padding="8dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="311dp"
        android:layout_height="312dp"
        android:contentDescription="@string/strong_tom"
        app:layout_constraintBottom_toTopOf="@+id/homebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        app:srcCompat="@drawable/tom_thanks" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="358dp"
        android:layout_height="240dp"
        android:contentDescription="@string/speech_bubble"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/speechbubble" />

    <TextView
        android:id="@+id/speechbubble"
        android:layout_width="190dp"
        android:layout_height="118dp"
        android:fontFamily="@font/kodchasan_regular"
        android:gravity="center"
        android:text="@string/for_joining_the_fight_for_health"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/thankyou"
        android:layout_width="368dp"
        android:layout_height="97dp"
        android:fontFamily="@font/kodchasan_bold"
        android:text="@string/thank_you"
        android:textColor="#9D3B3B"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

</androidx.constraintlayout.widget.ConstraintLayout>